--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 	<body>
 		<!--Секція хедер-->
-		<header>
-			<nav>
-				<a href="./index.html">WebStudio</a>
-				<ul>
-					<li><a href="/">Студия</a></li>
-					<li><a href="/">Портфолио</a></li>
-					<li><a href="/">Контакты</a></li>
+		<header class="header">
+			<nav class="header-nav">
+				<a class="header-logo link" href="./index.html">WebStudio</a>
+				<ul class="header-list list">
+					<li class="header-list-item"><a class="header-link link" href="/">Студия</a></li>
+					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+					<li class="header-list-item"><a class="header-link link" href="/">Контакты</a></li>
 				</ul>
 			</nav>
 			<ul>
