--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,69 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<!--Styles-->
+		<!--Стилі-->
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<!--Buttoms-->
+		<!--Кнопки фільтри-->
 		<section>
 			<h2 hidden>Фільтрація</h2>
 			<ul>
+				<li><button type="button">Все</button></li>
+				<li><button type="button">Веб-сайты</button></li>
+				<li><button type="button">Приложения</button></li>
+				<li><button type="button">Дизайн</button></li>
+				<li><button type="button">Маркетинг</button></li>
+			</ul>
+		</section>
+		<!--Види робіт-->
+		<section>
+			<ul>
 				<li>
-					<button type="button">Все</button>
-					<button type="button">Веб-сайты</button>
-					<button type="button">Приложения</button>
+					<img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
+					<h3>Технокряк</h3>
+					<p>Веб-сайт</p>
 				</li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>
+					<img src="./images/portfolio/Постер New Orlean vs Golden Star.jpg" alt="Постер New Orlean vs Golden Star" />
+					<h3>Постер New Orlean vs Golden Star</h3>
+					<p>Дизайн</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
+					<h3>Ресторан Seafood</h3>
+					<p>Приложение</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" />
+					<h3>Проект Prime</h3>
+					<p>Маркетинг</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" />
+					<h3>Проект Boxes</h3>
+					<p>Приложение</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no Borders" />
+					<h3>Inspiration has no Borders</h3>
+					<p>Веб-сайт</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition" />
+					<h3>Издание Limited Edition</h3>
+					<p>Дизайн</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" />
+					<h3>Проект LAB</h3>
+					<p>Маркетинг</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/Growing Business.jpg" alt="Growing Business" />
+					<h3>Growing Business</h3>
+					<p>Приложение</p>
+				</li>
 			</ul>
 		</section>
 	</body>
