--- a/portfolio.html
+++ b/portfolio.html
@@ -16,66 +16,106 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
+		<!--Секція хедер-->
+		<header class="header">
+			<nav class="header-nav">
+				<a class="header-logo link" href="./index.html">WebStudio</a>
+				<ul class="header-list list">
+					<li class="header-list-item"><a class="header-link link" href="/">Студия</a></li>
+					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+					<li class="header-list-item"><a class="header-link link" href="/">Контакты</a></li>
+				</ul>
+			</nav>
+			<ul>
+				<li>
+					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				</li>
+				<li>
+					<a href="tel:+380961111111">+38 096 111 11 11</a>
+				</li>
+			</ul>
+		</header>
 		<!--Кнопки фільтри-->
-		<section>
-			<h2 hidden>Фільтрація</h2>
-			<ul>
-				<li><button type="button">Все</button></li>
-				<li><button type="button">Веб-сайты</button></li>
-				<li><button type="button">Приложения</button></li>
-				<li><button type="button">Дизайн</button></li>
-				<li><button type="button">Маркетинг</button></li>
-			</ul>
-		</section>
-		<!--Види робіт-->
-		<section>
-			<ul>
-				<li>
-					<img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
-					<h3>Технокряк</h3>
-					<p>Веб-сайт</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Постер New Orlean vs Golden Star.jpg" alt="Постер New Orlean vs Golden Star" />
-					<h3>Постер New Orlean vs Golden Star</h3>
-					<p>Дизайн</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
-					<h3>Ресторан Seafood</h3>
-					<p>Приложение</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" />
-					<h3>Проект Prime</h3>
-					<p>Маркетинг</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" />
-					<h3>Проект Boxes</h3>
-					<p>Приложение</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no Borders" />
-					<h3>Inspiration has no Borders</h3>
-					<p>Веб-сайт</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition" />
-					<h3>Издание Limited Edition</h3>
-					<p>Дизайн</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" />
-					<h3>Проект LAB</h3>
-					<p>Маркетинг</p>
-				</li>
-				<li>
-					<img src="./images/portfolio/Growing Business.jpg" alt="Growing Business" />
-					<h3>Growing Business</h3>
-					<p>Приложение</p>
-				</li>
-			</ul>
-		</section>
+		<main>
+			<section>
+				<h2 hidden>Фільтрація</h2>
+				<ul>
+					<li><button class="button" type="button">Все</button></li>
+					<li><button class="button" type="button">Веб-сайты</button></li>
+					<li><button class="button" type="button">Приложения</button></li>
+					<li><button class="button" type="button">Дизайн</button></li>
+					<li><button class="button" type="button">Маркетинг</button></li>
+				</ul>
+			</section>
+			<!--Види робіт секція Hero-->
+			<section class="hero">
+				<ul class="hero-list list">
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
+						<h3 class="title">Технокряк</h3>
+						<p class="text-portfolio">Веб-сайт</p>
+					</li>
+					<li class="hero-item">
+						<img
+							class="img"
+							src="./images/portfolio/Постер New Orlean vs Golden Star.jpg"
+							alt="Постер New Orlean vs Golden Star"
+						/>
+						<h3 class="title">Постер New Orlean vs Golden Star</h3>
+						<p class="text-portfolio">Дизайн</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
+						<h3 class="title">Ресторан Seafood</h3>
+						<p class="text-portfolio">Приложение</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" />
+						<h3 class="title">Проект Prime</h3>
+						<p class="text-portfolio">Маркетинг</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" />
+						<h3 class="title">Проект Boxes</h3>
+						<p class="text-portfolio">Приложение</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no Borders" />
+						<h3 class="title">Inspiration has no Borders</h3>
+						<p class="text-portfolio">Веб-сайт</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition" />
+						<h3 class="title">Издание Limited Edition</h3>
+						<p class="text-portfolio">Дизайн</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" />
+						<h3 class="title">Проект LAB</h3>
+						<p class="text-portfolio">Маркетинг</p>
+					</li>
+					<li class="hero-item">
+						<img class="img" src="./images/portfolio/Growing Business.jpg" alt="Growing Business" />
+						<h3 class="title">Growing Business</h3>
+						<p class="text-portfolio">Приложение</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+		<!--Секція футер-->
+		<footer>
+			<a href="./portfolio.html">WebStudio</a>
+			<address>
+				<ul>
+					<li>
+						<a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer">
+							г. Киев, пр-т Леси Украинки, 26
+						</a>
+					</li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>
+			</address>
+		</footer>
 	</body>
 </html>
