--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<!--Секція замовлення послуг-->
 			<section>
 				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button type="button">Заказать услугу</button>
+				<button class="button" type="button">Заказать услугу</button>
 			</section>
 			<!--Секція опис-->
 			<section>
