--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="header-logo link" href="./index.html">WebStudio</a>
+				<a class="header-logo link" href="./index.html">
+					<span class="weblogo" lang="en">Web</span>
+					Studio
+				</a>
 				<ul class="header-list list">
-					<li class="header-list-item"><a class="header-link link" href="/">Студия</a></li>
+					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
 					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
 					<li class="header-list-item"><a class="header-link link" href="/">Контакты</a></li>
 				</ul>
+				<a href="#rozdil_1">Прочитайте розділ 1</a>
 			</nav>
 			<ul>
 				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -40,12 +44,12 @@
 			<!--Секція замовлення послуг-->
 			<section>
 				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button class="button" type="button">Заказать услугу</button>
+				<button class="hero-btm" type="button">Заказать услугу</button>
 			</section>
 			<!--Секція опис-->
 			<section>
 				<h2 hidden>Преимущества</h2>
-				<ul>
+				<ul class="link">
 					<li>
 						<h3>Внимание к деталям</h3>
 						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -68,7 +72,7 @@
 			<!--Секція чим займаємось-->
 			<section>
 				<h2>Чем мы занимаемся</h2>
-				<ul>
+				<ul class="link">
 					<li>
 						<img src="./images/sozdaniesaita.jpg" alt="создание сайта" width="370" height="294" />
 					</li>
@@ -82,7 +86,7 @@
 			<!--Наша команда-->
 			<section>
 				<h2>Наша команда</h2>
-				<ul>
+				<ul class="link">
 					<li>
 						<img src="./images/Igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
 						<h3>Игорь Демьяненко</h3>
@@ -110,7 +114,7 @@
 		<footer>
 			<a href="./index.html">WebStudio</a>
 			<address>
-				<ul>
+				<ul class="link">
 					<li>
 						<a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer">
 							г. Киев, пр-т Леси Украинки, 26
