--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 			</nav>
 			<ul>
 				<li>
-					<a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="head-cont head-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="head-cont head-tel" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -111,13 +111,13 @@
 			</section>
 		</main>
 		<!--Секція футер-->
-		<footer>
+		<footer class="footer">
 			<a class="link" href="./index.html">WebStudio</a>
 			<address>
 				<ul class="link">
 					<li>
 						<a
-							class="link"
+							class="link foot-adr foot-cont"
 							href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
 							target="_blank"
 							rel="noopener nofollow noreferrer"
@@ -125,8 +125,8 @@
 							г. Киев, пр-т Леси Украинки, 26
 						</a>
 					</li>
-					<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li><a class="link foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a class="link foot-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
