--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,12 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="header-logo link" href="./index.html">WebStudio</a>
+				<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+					Web
+					<span class="weblogo">Studio</span>
+				</a>
 				<ul class="header-list list">
-					<li class="header-list-item"><a class="header-link link" href="/">Студия</a></li>
+					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
 					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
 					<li class="header-list-item"><a class="header-link link" href="/">Контакты</a></li>
 				</ul>
