--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="header-logo link" href="./index.html">
-					<span class="weblogo" lang="en">Web</span>
-					Studio
+				<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+					Web
+					<span class="web-logo">Studio</span>
 				</a>
-				<ul class="header-list list">
+				<ul class="header-list link">
 					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
 					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
 					<li class="header-list-item"><a class="header-link link" href="/">Контакты</a></li>
 				</ul>
-				<a href="#rozdil_1">Прочитайте розділ 1</a>
 			</nav>
 			<ul>
 				<li>
@@ -112,7 +111,10 @@
 		</main>
 		<!--Секція футер-->
 		<footer class="footer">
-			<a class="link" href="./index.html">WebStudio</a>
+			<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+				Web
+				<span class="web-logo">Studio</span>
+			</a>
 			<address>
 				<ul class="link">
 					<li>
