--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 			<nav class="header-nav">
 				<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
 					Web
-					<span class="weblogo">Studio</span>
+					<span class="web-logo">Studio</span>
 				</a>
 				<ul class="header-list list">
 					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
@@ -43,11 +43,11 @@
 			<section>
 				<h2 hidden>Фільтрація</h2>
 				<ul>
-					<li><button class="button" type="button">Все</button></li>
-					<li><button class="button" type="button">Веб-сайты</button></li>
-					<li><button class="button" type="button">Приложения</button></li>
-					<li><button class="button" type="button">Дизайн</button></li>
-					<li><button class="button" type="button">Маркетинг</button></li>
+					<li><button class="btn-port link" type="button">Все</button></li>
+					<li><button class="btn-port link" type="button">Веб-сайты</button></li>
+					<li><button class="btn-port link" type="button">Приложения</button></li>
+					<li><button class="btn-port link" type="button">Дизайн</button></li>
+					<li><button class="btn-port link" type="button">Маркетинг</button></li>
 				</ul>
 			</section>
 			<!--Види робіт секція Hero-->
