--- a/portfolio.html
+++ b/portfolio.html
@@ -52,54 +52,58 @@
 			</section>
 			<!--Види робіт секція Hero-->
 			<section class="hero">
-				<ul class="hero-list list">
+				<ul class="hero-list link">
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
-						<h3 class="title">Технокряк</h3>
+						<img class="img-port" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width: 370px; height: 294px;/>
+						<h3 class="title-port">Технокряк</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
 					<li class="hero-item">
-						<img
-							class="img"
-							src="./images/portfolio/Постер New Orlean vs Golden Star.jpg"
-							alt="Постер New Orlean vs Golden Star"
-						/>
-						<h3 class="title">Постер New Orlean vs Golden Star</h3>
+						<img class="img-port" src="./images/portfolio/Постер New Orlean vs Golden Star.jpg" alt="Постер New Orlean
+						vs Golden Star" width: 370px; height: 294px; />
+						<h3 class="title-port">Постер New Orlean vs Golden Star</h3>
 						<p class="text-portfolio">Дизайн</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
-						<h3 class="title">Ресторан Seafood</h3>
+						<img class="img-port" src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" width: 370px;
+						height: 294px;/>
+						<h3 class="title-port">Ресторан Seafood</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" />
-						<h3 class="title">Проект Prime</h3>
+						<img class="img-port" src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" width: 370px; height:
+						294px;/>
+						<h3 class="title-port">Проект Prime</h3>
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" />
-						<h3 class="title">Проект Boxes</h3>
+						<img class="img-port" src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; height:
+						294px;/>
+						<h3 class="title-port">Проект Boxes</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no Borders" />
-						<h3 class="title">Inspiration has no Borders</h3>
+						<img class="img-port" src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no
+						Borders" width: 370px; height: 294px;/>
+						<h3 class="title-port">Inspiration has no Borders</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition" />
-						<h3 class="title">Издание Limited Edition</h3>
+						<img class="img-port" src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition"
+						width: 370px; height: 294px;/>
+						<h3 class="title-port">Издание Limited Edition</h3>
 						<p class="text-portfolio">Дизайн</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" />
-						<h3 class="title">Проект LAB</h3>
+						<img class="img-port" src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" width: 370px; height:
+						294px;/>
+						<h3 class="title-port">Проект LAB</h3>
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
 					<li class="hero-item">
-						<img class="img" src="./images/portfolio/Growing Business.jpg" alt="Growing Business" />
-						<h3 class="title">Growing Business</h3>
+						<img class="img-port" src="./images/portfolio/Growing Business.jpg" alt="Growing Business" width: 370px;
+						height: 294px;/>
+						<h3 class="title-port">Growing Business</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
 				</ul>
