--- a/portfolio.html
+++ b/portfolio.html
@@ -23,18 +23,18 @@
 					Web
 					<span class="web-logo">Studio</span>
 				</a>
-				<ul class="header-list list">
+				<ul class="header-list link">
 					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
 					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
-					<li class="header-list-item"><a class="header-link link" href="/">Контакты</a></li>
+					<li class="header-list-item"><a class="header-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="link">
 				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="head-cont head-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="head-cont head-tel" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -42,7 +42,7 @@
 		<main>
 			<section>
 				<h2 hidden>Фільтрація</h2>
-				<ul>
+				<ul class="link">
 					<li><button class="btn-port link" type="button">Все</button></li>
 					<li><button class="btn-port link" type="button">Веб-сайты</button></li>
 					<li><button class="btn-port link" type="button">Приложения</button></li>
@@ -53,54 +53,54 @@
 			<!--Види робіт секція Hero-->
 			<section class="hero">
 				<ul class="hero-list link">
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width: 370px; height: 294px;/>
 						<h3 class="title-port">Технокряк</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Постер New Orlean vs Golden Star.jpg" alt="Постер New Orlean
 						vs Golden Star" width: 370px; height: 294px; />
 						<h3 class="title-port">Постер New Orlean vs Golden Star</h3>
 						<p class="text-portfolio">Дизайн</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" width: 370px;
 						height: 294px;/>
 						<h3 class="title-port">Ресторан Seafood</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" width: 370px; height:
 						294px;/>
 						<h3 class="title-port">Проект Prime</h3>
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; height:
 						294px;/>
 						<h3 class="title-port">Проект Boxes</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no
 						Borders" width: 370px; height: 294px;/>
 						<h3 class="title-port">Inspiration has no Borders</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition"
 						width: 370px; height: 294px;/>
 						<h3 class="title-port">Издание Limited Edition</h3>
 						<p class="text-portfolio">Дизайн</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" width: 370px; height:
 						294px;/>
 						<h3 class="title-port">Проект LAB</h3>
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
-					<li class="hero-item">
+					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Growing Business.jpg" alt="Growing Business" width: 370px;
 						height: 294px;/>
 						<h3 class="title-port">Growing Business</h3>
@@ -110,17 +110,25 @@
 			</section>
 		</main>
 		<!--Секція футер-->
-		<footer>
-			<a href="./portfolio.html">WebStudio</a>
+		<footer class="footer">
+			<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+				Web
+				<span class="web-footer-logo">Studio</span>
+			</a>
 			<address>
-				<ul>
+				<ul class="link">
 					<li>
-						<a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer">
+						<a
+							class="link foot-adr foot-cont"
+							href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
+							target="_blank"
+							rel="noopener nofollow noreferrer"
+						>
 							г. Киев, пр-т Леси Украинки, 26
 						</a>
 					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li><a class="link foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a class="link foot-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
