--- a/portfolio.html
+++ b/portfolio.html
@@ -61,49 +61,67 @@
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Постер New Orlean vs Golden Star.jpg" alt="Постер New Orlean
 						vs Golden Star" width: 370px; height: 294px; />
-						<h3 class="title-port">Постер New Orlean vs Golden Star</h3>
+						<h3 class="title-port">
+							Постер
+							<span lang="en-us">New Orlean vs Golden Star</span>
+						</h3>
 						<p class="text-portfolio">Дизайн</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" width: 370px;
 						height: 294px;/>
-						<h3 class="title-port">Ресторан Seafood</h3>
+						<h3 class="title-port">
+							Ресторан
+							<span lang="en-us">Seafood</span>
+						</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" width: 370px; height:
 						294px;/>
-						<h3 class="title-port">Проект Prime</h3>
+						<h3 class="title-port">
+							Проект
+							<span lang="en-us">Prime</span>
+						</h3>
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; height:
 						294px;/>
-						<h3 class="title-port">Проект Boxes</h3>
+						<h3 class="title-port">
+							Проект
+							<span lang="en-us">Boxes</span>
+						</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no
 						Borders" width: 370px; height: 294px;/>
-						<h3 class="title-port">Inspiration has no Borders</h3>
+						<h3 lang="en-us" class="title-port">Inspiration has no Borders</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition"
 						width: 370px; height: 294px;/>
-						<h3 class="title-port">Издание Limited Edition</h3>
+						<h3 class="title-port">
+							Издание
+							<span lang="en-us">Limited Edition</span>
+						</h3>
 						<p class="text-portfolio">Дизайн</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" width: 370px; height:
 						294px;/>
-						<h3 class="title-port">Проект LAB</h3>
+						<h3 class="title-port">
+							Проект
+							<span lang="en-us">LAB</span>
+						</h3>
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Growing Business.jpg" alt="Growing Business" width: 370px;
 						height: 294px;/>
-						<h3 class="title-port">Growing Business</h3>
+						<h3 lang="en-us" class="title-port">Growing Business</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
 				</ul>
