--- a/portfolio.html
+++ b/portfolio.html
@@ -54,13 +54,19 @@
 			<section class="hero">
 				<ul class="hero-list link">
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width: 370px; height: 294px;/>
+						<img class="img-port" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
 						<h3 class="title-port">Технокряк</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Постер New Orlean vs Golden Star.jpg" alt="Постер New Orlean
-						vs Golden Star" width: 370px; height: 294px; />
+						<img
+							class="img-port"
+							src="./images/portfolio/NewOrleanvsGoldenStar.jpg"
+							alt="Постер New Orlean
+						vs Golden Star"
+							width="370"
+							height="294"
+						/>
 						<h3 class="title-port">
 							Постер
 							<span lang="en-us">New Orlean vs Golden Star</span>
@@ -68,8 +74,13 @@
 						<p class="text-portfolio">Дизайн</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Ресторан Seafood.jpg" alt="Ресторан Seafood" width: 370px;
-						height: 294px;/>
+						<img
+							class="img-port"
+							src="./images/portfolio/Seafood.jpg"
+							alt="Ресторан Seafood"
+							width="370"
+							height="294"
+						/>
 						<h3 class="title-port">
 							Ресторан
 							<span lang="en-us">Seafood</span>
@@ -77,8 +88,7 @@
 						<p class="text-portfolio">Приложение</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Проект Prime.jpg" alt="Проект Prime" width: 370px; height:
-						294px;/>
+						<img class="img-port" src="./images/portfolio/Prime.jpg" alt="Проект Prime" width="370" height="294" />
 						<h3 class="title-port">
 							Проект
 							<span lang="en-us">Prime</span>
@@ -86,8 +96,7 @@
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; height:
-						294px;/>
+						<img class="img-port" src="./images/portfolio/Boxes.jpg" alt="Проект Boxes" width="370" height="294" />
 						<h3 class="title-port">
 							Проект
 							<span lang="en-us">Boxes</span>
@@ -95,14 +104,25 @@
 						<p class="text-portfolio">Приложение</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Inspiration has no Borders.jpg" alt="Inspiration has no
-						Borders" width: 370px; height: 294px;/>
+						<img
+							class="img-port"
+							src="./images/portfolio/InspirationhasnoBorders.jpg"
+							alt="Inspiration has no
+						Borders"
+							width="370"
+							height="294"
+						/>
 						<h3 lang="en-us" class="title-port">Inspiration has no Borders</h3>
 						<p class="text-portfolio">Веб-сайт</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Издание Limited Edition.jpg" alt="Издание Limited Edition"
-						width: 370px; height: 294px;/>
+						<img
+							class="img-port"
+							src="./images/portfolio/LimitedEdition.jpg"
+							alt="Издание Limited Edition"
+							width="370"
+							height="294"
+						/>
 						<h3 class="title-port">
 							Издание
 							<span lang="en-us">Limited Edition</span>
@@ -110,8 +130,7 @@
 						<p class="text-portfolio">Дизайн</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Проект LAB.jpg" alt="Проект LAB" width: 370px; height:
-						294px;/>
+						<img class="img-port" src="./images/portfolio/LAB.jpg" alt="Проект LAB" width="370" height="294" />
 						<h3 class="title-port">
 							Проект
 							<span lang="en-us">LAB</span>
@@ -119,8 +138,13 @@
 						<p class="text-portfolio">Маркетинг</p>
 					</li>
 					<li class="bond-port">
-						<img class="img-port" src="./images/portfolio/Growing Business.jpg" alt="Growing Business" width: 370px;
-						height: 294px;/>
+						<img
+							class="img-port"
+							src="./images/portfolio/GrowingBusiness.jpg"
+							alt="Growing Business"
+							width="370"
+							height="294"
+						/>
 						<h3 lang="en-us" class="title-port">Growing Business</h3>
 						<p class="text-portfolio">Приложение</p>
 					</li>
