--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 			</nav>
 			<ul class="link">
 				<li>
-					<a class="head-cont head-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="head-cont head-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="head-cont head-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="head-cont head-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
