--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
 				<ul class="link">
 					<li>
 						<a
-							class="link foot-adr foot-cont"
+							class="link foot-cont"
 							href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
 							target="_blank"
 							rel="noopener nofollow noreferrer"
 						>
-							г. Киев, пр-т Леси Украинки, 26
+							<span class="foot-adr">г. Киев, пр-т Леси Украинки, 26</span>
 						</a>
 					</li>
 					<li><a class="link foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
