--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
 			</nav>
 			<ul class="link">
 				<li>
-					<a class="head-cont head-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="head-cont head-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="head-cont head-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="head-cont head-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -161,12 +161,12 @@
 				<ul class="link">
 					<li>
 						<a
-							class="link foot-adr foot-cont"
+							class="link foot-cont"
 							href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
 							target="_blank"
 							rel="noopener nofollow noreferrer"
 						>
-							г. Киев, пр-т Леси Украинки, 26
+							<span class="foot-adr">г. Киев, пр-т Леси Украинки, 26</span>
 						</a>
 					</li>
 					<li><a class="link foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
