--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<span class="web-logo">Studio</span>
 				</a>
 				<ul class="header-list link">
-					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
-					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
-					<li class="header-list-item"><a class="header-link link" href="">Контакты</a></li>
+					<li><a class="header-list-item list" href="./index.html">Студия</a></li>
+					<li><a class="header-list-item list" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="header-list-item list" href="">Контакты</a></li>
 				</ul>
 			</nav>
 			<ul class="link">
@@ -91,7 +91,7 @@
 			</section>
 
 			<!--Наша команда-->
-			<section>
+			<section class="team-seaction">
 				<h2 class="title text-title">Наша команда</h2>
 				<ul class="link">
 					<li class="team">
