--- a/portfolio.html
+++ b/portfolio.html
@@ -19,29 +19,29 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+				<a class="main-logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
 					Web
 					<span class="web-logo">Studio</span>
 				</a>
-				<ul class="header-list link">
-					<li class="header-list-item"><a class="header-link link" href="./index.html">Студия</a></li>
-					<li class="header-list-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
-					<li class="header-list-item"><a class="header-link link" href="">Контакты</a></li>
+				<ul class="list">
+					<li><a class="header-link link current" href="./index.html">Студия</a></li>
+					<li><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="header-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul class="link">
+			<ul class="list">
 				<li>
-					<a class="head-cont head-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="contact-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="head-cont head-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="contact-link tel link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
 		<!--Кнопки фільтри-->
 		<main>
 			<section>
-				<h2 hidden>Фільтрація</h2>
+				<h1 visually-hidden>Фільтрація</h1>
 				<ul class="link">
 					<li><button class="btn-port link" type="button">Все</button></li>
 					<li><button class="btn-port link" type="button">Веб-сайты</button></li>
@@ -49,9 +49,7 @@
 					<li><button class="btn-port link" type="button">Дизайн</button></li>
 					<li><button class="btn-port link" type="button">Маркетинг</button></li>
 				</ul>
-			</section>
-			<!--Види робіт секція Hero-->
-			<section class="hero">
+				<!--Види робіт секція Hero-->
 				<ul class="hero-list link">
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
@@ -158,7 +156,7 @@
 				<span class="web-footer-logo">Studio</span>
 			</a>
 			<address>
-				<ul class="link">
+				<ul class="list">
 					<li>
 						<a
 							class="link foot-cont"
