--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
 		<!--Кнопки фільтри-->
 		<main>
 			<section>
-				<h1 visually-hidden>Фільтрація</h1>
-				<ul class="link">
+				<h1 hidden>Фільтрація</h1>
+				<ul class="list">
 					<li><button class="btn-port link" type="button">Все</button></li>
 					<li><button class="btn-port link" type="button">Веб-сайты</button></li>
 					<li><button class="btn-port link" type="button">Приложения</button></li>
