--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 					<li><button class="btn-port link" type="button">Маркетинг</button></li>
 				</ul>
 				<!--Види робіт секція Hero-->
-				<ul class="hero-list link">
+				<ul class="hero-list list">
 					<li class="bond-port">
 						<img class="img-port" src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
 						<h3 class="title-port">Технокряк</h3>
