--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+				<a class="main-logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
 					Web
 					<span class="web-logo">Studio</span>
 				</a>
-				<ul class="header-list link">
-					<li><a class="header-list-item list" href="./index.html">Студия</a></li>
-					<li><a class="header-list-item list" href="./portfolio.html">Портфолио</a></li>
-					<li><a class="header-list-item list" href="">Контакты</a></li>
+				<ul class="list">
+					<li><a class="header-link link current" href="./index.html">Студия</a></li>
+					<li><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="header-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul class="link">
+			<ul class="list">
 				<li>
-					<a class="head-cont head-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="contact-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="head-cont head-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="contact-link tel link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -50,7 +50,7 @@
 			<!--Секція опис-->
 			<section>
 				<h2 hidden>Преимущества</h2>
-				<ul class="main-benefits link">
+				<ul class="main-benefits list">
 					<li>
 						<h3 class="point-benefits">Внимание к деталям</h3>
 						<p class="text-benefits">
@@ -78,8 +78,8 @@
 
 			<!--Секція чим займаємось-->
 			<section>
-				<h2 class="title text-title">Чем мы занимаемся</h2>
-				<ul class="link">
+				<h2 class="section-title text-title">Чем мы занимаемся</h2>
+				<ul class="list">
 					<li>
 						<img src="./images/sozdaniesaita.jpg" alt="создание сайта" width="370" height="294" />
 					</li>
@@ -91,25 +91,25 @@
 			</section>
 
 			<!--Наша команда-->
-			<section class="team-seaction">
-				<h2 class="title text-title">Наша команда</h2>
-				<ul class="link">
-					<li class="team">
+			<section class="team-section">
+				<h2 class="section-title text-title">Наша команда</h2>
+				<ul class="list">
+					<li>
 						<img src="./images/Igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
 						<h3 class="name-team">Игорь Демьяненко</h3>
 						<p lang="en-us" class="job-team">Product Designer</p>
 					</li>
-					<li class="team">
+					<li>
 						<img src="./images/Olga.jpg" alt="Ольга Репина" width="270" height="260" />
 						<h3 class="name-team">Ольга Репина</h3>
 						<p lang="en-us" class="job-team">Frontend Developer</p>
 					</li>
-					<li class="team">
+					<li>
 						<img src="./images/Nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
 						<h3 class="name-team">Николай Тарасов</h3>
 						<p lang="en-us" class="job-team">Marketing</p>
 					</li>
-					<li class="team">
+					<li>
 						<img src="./images/Mihail.jpg" alt="Михаил Ермаков" width="270" height="260" />
 						<h3 class="name-team">Михаил Ермаков</h3>
 						<p lang="en-us" class="job-team">UI Designer</p>
@@ -124,7 +124,7 @@
 				<span class="web-footer-logo">Studio</span>
 			</a>
 			<address>
-				<ul class="link">
+				<ul class="list">
 					<li>
 						<a
 							class="link foot-cont"
