--- a/portfolio.html
+++ b/portfolio.html
@@ -19,35 +19,35 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="main-logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
-					Web
-					<span class="web-logo">Studio</span>
+				<a class="logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+					<span class="accent">Web</span>
+					Studio
 				</a>
 				<ul class="list">
-					<li><a class="header-link link current" href="./index.html">Студия</a></li>
-					<li><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="header-link link" href="./index.html">Студия</a></li>
+					<li><a class="header-link link current" href="./portfolio.html">Портфолио</a></li>
 					<li><a class="header-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
 			<ul class="list">
 				<li>
-					<a class="contact-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="contact-link tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
 		<!--Кнопки фільтри-->
 		<main>
 			<section>
-				<h1 hidden>Фільтрація</h1>
+				<h1 class="visually-hidden">Фільтрація</h1>
 				<ul class="list">
-					<li><button class="btn-port link" type="button">Все</button></li>
-					<li><button class="btn-port link" type="button">Веб-сайты</button></li>
-					<li><button class="btn-port link" type="button">Приложения</button></li>
-					<li><button class="btn-port link" type="button">Дизайн</button></li>
-					<li><button class="btn-port link" type="button">Маркетинг</button></li>
+					<li><button class="btn-port active" type="button">Все</button></li>
+					<li><button class="btn-port" type="button">Веб-сайты</button></li>
+					<li><button class="btn-port" type="button">Приложения</button></li>
+					<li><button class="btn-port" type="button">Дизайн</button></li>
+					<li><button class="btn-port" type="button">Маркетинг</button></li>
 				</ul>
 				<!--Види робіт секція Hero-->
 				<ul class="hero-list list">
@@ -151,11 +151,11 @@
 		</main>
 		<!--Секція футер-->
 		<footer class="footer">
-			<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
-				Web
-				<span class="web-footer-logo">Studio</span>
+			<a class="logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+				<span class="accent">Web</span>
+				Studio
 			</a>
-			<address>
+			<adress class="adress">
 				<ul class="list">
 					<li>
 						<a
@@ -170,7 +170,7 @@
 					<li><a class="link foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a class="link foot-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
-			</address>
+			</adress>
 		</footer>
 	</body>
 </html>
