--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		<!--Секція хедер-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="main-logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
-					Web
-					<span class="web-logo">Studio</span>
+				<a class="logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+					<span class="accent">Web</span>
+					Studio
 				</a>
 				<ul class="list">
 					<li><a class="header-link link current" href="./index.html">Студия</a></li>
@@ -32,10 +32,10 @@
 			</nav>
 			<ul class="list">
 				<li>
-					<a class="contact-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 				<li>
-					<a class="contact-link tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+					<a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
@@ -49,7 +49,7 @@
 			</section>
 			<!--Секція опис-->
 			<section>
-				<h2 hidden>Преимущества</h2>
+				<h2 class="visually-hidden">Преимущества</h2>
 				<ul class="main-benefits list">
 					<li>
 						<h3 class="point-benefits">Внимание к деталям</h3>
@@ -78,7 +78,7 @@
 
 			<!--Секція чим займаємось-->
 			<section>
-				<h2 class="section-title text-title">Чем мы занимаемся</h2>
+				<h2 class="section-title">Чем мы занимаемся</h2>
 				<ul class="list">
 					<li>
 						<img src="./images/sozdaniesaita.jpg" alt="создание сайта" width="370" height="294" />
@@ -119,11 +119,11 @@
 		</main>
 		<!--Секція футер-->
 		<footer class="footer">
-			<a class="main-logo link" href="./index.html" aria-label="Посилання на студію" lang="en-us">
-				Web
-				<span class="web-footer-logo">Studio</span>
+			<a class="logo link list" href="./index.html" aria-label="Посилання на студію" lang="en-us">
+				<span class="accent">Web</span>
+				Studio
 			</a>
-			<address>
+			<adress class="adress">
 				<ul class="list">
 					<li>
 						<a
@@ -138,7 +138,7 @@
 					<li><a class="link foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a class="link foot-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
-			</address>
+			</adress>
 		</footer>
 	</body>
 </html>
